--- a/watch.html
+++ b/watch.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div>
-        <img src="./watch.png" style="width: 100%;" >
-        <img src="./apple.png" style="width:90px;height:80px;margin-left:600px;margin-top:150px;">
+        <img src="./image/watch/watch.png" style="width: 100%;" >
+        <img src="./image/watch/apple.png" style="width:90px;height:80px;margin-left:600px;margin-top:150px;">
         <b>
             <h1 style="font-size: 65px;margin-top:-80px;margin-left:680px;">
                 WATCH
@@ -28,13 +28,13 @@
                 购买 >
             </span>
         </a>
-        <img src="./apple.png" style="width: 50px;height:40px;margin-left:230px;margin-top: 230px;">
+        <img src="./image/watch/apple.png" style="width: 50px;height:40px;margin-left:230px;margin-top: 230px;">
         <span>
             <h2 style="font-size: 25px;margin-top: -35px;margin-left: 290px;">
                 WATCH 
             </h2>
         </span>
-        <img src="./tubiao.png" style="width: 100px;height:40px;margin-right:1010px;margin-top:-60px;float:right;">
+        <img src="./image/watch/tubiao.png" style="width: 100px;height:40px;margin-right:1010px;margin-top:-60px;float:right;">
         <b>
             <h2 style="font-size: 20px;color: red;margin-left: 330px;margin-top: -20px;">
                 SERIES 4
@@ -50,14 +50,14 @@
                 购买 >
             </span>
         </a>
-        <img src="./nike.png" style="width: 685px;height:800px;margin-top:100px;margin-left:-420px;float: left;">
-        <img src="./apple.png" style="width: 50px;height:40px;margin-right:450px;margin-top: -109px;float:right;">
+        <img src="./image/watch/nike.png" style="width: 685px;height:800px;margin-top:100px;margin-left:-420px;float: left;">
+        <img src="./image/watch/apple.png" style="width: 50px;height:40px;margin-right:450px;margin-top: -109px;float:right;">
         <span>
             <h2 style="font-size: 25px;margin-top: -100px;margin-right: 330px;float:right;">
                 WATCH 
             </h2>
         </span>
-        <img src="./herm.png" style="width: 120px;height:40px;margin-right:210px;margin-top:-110px;float:right;">
+        <img src="./image/watch/herm.png" style="width: 120px;height:40px;margin-right:210px;margin-top:-110px;float:right;">
         <b>
             <h2 style="font-size: 20px;color: red;margin-right: 310px;margin-top: -60px;float:right;">
                 SERIES 4
@@ -73,8 +73,8 @@
                 购买 >
             </span>
         </a>
-        <img src="./hermes.png" style="width: 685px;height:800px;margin-right:50px;margin-top:70px;float: right;">
-        <img src="./watchos6.jpg" style="margin-top: 20px;margin-right:50px;width: 800px;height: 500px;float:right;">
+        <img src="./image/watch/hermes.png" style="width: 685px;height:800px;margin-right:50px;margin-top:70px;float: right;">
+        <img src="./image/watch/watchos6.jpg" style="margin-top: 20px;margin-right:50px;width: 800px;height: 500px;float:right;">
         <h3 style="margin-left: 200px;margin-top: 120px;float: left;font-size: 30px;">
             watchOS 6
         </h3>
@@ -87,7 +87,7 @@
         <h1 style="float:left;font-size: 45px;margin-top:300px;margin-left: 180px;">
             本色，永不褪色
         </h1>
-        <img src="./bense.jpg" style="margin-top: 240px;width: 680px;height:800px;float:left;margin-left:-450px;">
+        <img src="./image/watch/bense.jpg" style="margin-top: 240px;width: 680px;height:800px;float:left;margin-left:-450px;">
         <a href="/cn/shop/goto/product/MV9Q2" >
             <span style="float:left;margin-top:200px;margin-left:-500px;">
                 立即购买新款彩虹版表带 >
@@ -95,12 +95,12 @@
         <h1 style="float:right;font-size: 45px;margin-top:120px;margin-right: 240px;">
             带出新风采
         </h1>  
-        <img src="./fengcai.jpg" style="margin-top: 25px;margin-right:50px;width: 680px;height:800px;float: right;">
+        <img src="./image/watch/fengcai.jpg" style="margin-top: 25px;margin-right:50px;width: 680px;height:800px;float: right;">
         <a href="/cn/shop/goto/watch/bands" >
             <span style="float:right;margin-top:-840px;margin-right:300px;">
                 选购新款表带 >
             </span></a>
-        <img src="./RMB.png" style="width: 65px;height:65px;margin-top:90px;margin-left:-300px;float:left;">
+        <img src="./image/watch/RMB.png" style="width: 65px;height:65px;margin-top:90px;margin-left:-300px;float:left;">
         <br>
         <br>
         <b style="margin-top:180px;font-size: 20px;float: left;margin-left:-310px;">
@@ -117,7 +117,7 @@
             <span style="margin-left: -320px;font-size: 20px;margin-top:300px;float: left;">
                 进一步了解 >
             </span></a>
-        <img src="./fanghe.png" style="width: 65px;height:65px;margin-top:80px;float: right;margin-right: 350px;" >
+        <img src="./image/watch/fanghe.png" style="width: 65px;height:65px;margin-top:80px;float: right;margin-right: 350px;" >
         <strong style="font-size:20px;margin-right: -200px;margin-top:160px;float: right;">
             免费送货<br>享受免费送货上门服务。
         </strong>
@@ -126,9 +126,9 @@
                 进一步了解 >
             </span>
         </a>
-        <img src="./youhui.png" style="margin-top: 20px;margin-left:50px;width: 1410px;height: 500px;">
-        <img src="./pay.png" style="margin-top: 160px;margin-left:200px;width: 500px;height: 500px;">
-        <img src="./apple.png" style="margin-right:525px;margin-top:250px;width:55px;height:55px;float:right;">
+        <img src="./image/watch/youhui2.png" style="margin-top: 20px;margin-left:50px;width: 1410px;height: 500px;">
+        <img src="./image/watch/pay.png" style="margin-top: 160px;margin-left:200px;width: 500px;height: 500px;">
+        <img src="./image/watch/apple.png" style="margin-right:525px;margin-top:250px;width:55px;height:55px;float:right;">
         <b style="font-size: 50px;margin-right:450px;float: right;margin-top: -410px;">
             Pay
         </b>
@@ -142,10 +142,10 @@
             进一步了解 >
         </span>
         </a>
-        <img src="./biaolang.png" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;">
+        <img src="./image/watch/biaolang2.png" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;">
         <h2 style="font-size: 50px;text-align:center;margin-top:120px;">
             尽享 Apple Watch 的精彩</h2>
-        <img src="./jiqiao.png" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;" >
-        <img src="./yuanhuan.png" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;" >
-        <img src="./music.jpg" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;" >
+        <img src="./image/watch/jiqiao.png" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;" >
+        <img src="./image/watch/yuanhuan.png" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;" >
+        <img src="./image/watch/music.jpg" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;" >
     </div>
