--- a/Music.html
+++ b/Music.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./Music.css">
 </head>
 <body>
-    <div><img src="./苹果.png" alt="">Music</div> 
+    <div><img src="./image/music/苹果.png" alt="">Music</div> 
     <div>
         <div>上千万首歌曲，</div>
         <div>敬请沉醉。</div>
@@ -18,7 +18,7 @@
        </div>
       <div class="jinyibu"><a href="https://www.apple.com/cn/apple-music/">进一步了解>
     </a></div>
-    <div class="diyizhang"><img src="./第一张右边.png" alt=""></div>
+    <div class="diyizhang"><img src="./image/music/第一张右边.png" alt=""></div>
     </div>   
     <div class="jia">
     <div>HomePod</div>
@@ -27,7 +27,7 @@
         <a href="https://www.apple.com/cn/homepod/">进一步了解></a>
         <a href="https://www.apple.com/cn/shop/buy-homepod/homepod">购买></a>
     </div>
-    <div class="dierzhang"><img src="./家的新声.png" alt=""></div>
+    <div class="dierzhang"><img src="./image/music/家的新声.png" alt=""></div>
     <div class="AirPods">
         <div>AirPods</div>
         <div>可无线充电</div>
@@ -37,7 +37,7 @@
             <a href="https://www.apple.com/cn/airpods/">进一步了解></a>
             <a href="https://www.apple.com/cn/shop/select-airpods">购买></a>
         </div>
-    <div class="tou"><img src="./头.png" alt=""></div>
+    <div class="tou"><img src="./image/music/头.png" alt=""></div>
     </div>
     <div class="touch">
             <div>ipod touch</div>
@@ -46,7 +46,7 @@
     <div class="goumai3">
             <a href="https://www.apple.com/cn/ipod-touch/">进一步了解></a>
             <a href="https://www.apple.com/cn/shop/buy-ipod/ipod-touch">购买></a></div>
-    <div class="yinyue"><img src="./音乐.png" alt=""></div>
+    <div class="yinyue"><img src="./image/music/音乐.png" alt=""></div>
     <div class="gequ">
         <div>配件</div>
         <div>给好听歌曲，</div>
@@ -54,11 +54,11 @@
     <div class="goumai4">
 <a href="https://www.apple.com/cn/shop/accessories/all-accessories/headphones-speakers">选购耳机和扬声器></a>
     </div>
-    <div class="peijian"><img src="./配件.png" alt=""></div>
+    <div class="peijian"><img src="./image/music/配件.png" alt=""></div>
     <div class="app">App Store 充值卡</div>
     <div>为精彩游戏和 App 更添惊喜</div>
     <div class="xuan"><a href="https://www.apple.com/cn/shop/gift-cards">选购充值卡></a></div>
-    <div class="chongzhi"><img src="./充值卡.png" alt=""></div>
+    <div class="chongzhi"><img src="./image/music/充值卡.png" alt=""></div>
     <div class="iTunes">
         <div>iTunes</div>
         <div>你的私人音乐</div>
@@ -68,29 +68,29 @@
 <a href="https://www.apple.com/cn/itunes/">进一步了解></a>
 <a href="https://www.apple.com/cn/itunes/download/">下载iTunes></a>
     </div>
-<div class="siren"><img src="./私人.png" alt=""></div>
+<div class="siren"><img src="./image/music/私人.png" alt=""></div>
 <div class="duokuan">
     <div>多款出色的音乐创作APP，</div>
     <div>出自Apple</div>
-    <div class="chuzi"><img src="./出自.png" alt=""></div>
+    <div class="chuzi"><img src="./image/music/出自.png" alt=""></div>
 </div>
-    <div class="ziti"><img src="./音乐备忘录.png" alt=""> 音乐备忘录</div>
+    <div class="ziti"><img src="./image/music/音乐备忘录.png" alt=""> 音乐备忘录</div>
     <div class="qingdian">轻点手指，捕捉所有音乐灵感，随后将它们转变为佳作。</div>
     <div class="jinyibu2">
         <a href="https://www.apple.com/cn/music-memos/">进一步了解></a></div>
-   <div class="ku"><img src="./库乐队.png" alt=""> 库乐队</div>
+   <div class="ku"><img src="./image/music/库乐队.png" alt=""> 库乐队</div>
    <div class="zhonglei">以种类丰富的乐器，在 Mac、iPad、iPhone 或 </div>
    <div class="shang">iPod touch 上创作你的音乐。</div>
    <div class="jinyibu3"><a href="https://www.apple.com/cn/ios/garageband/">进一步了解></a></div>
-<div class="logic"><img src="./Logic.png" alt="">Logic Pro X</div>
+<div class="logic"><img src="./image/music/Logic.png" alt="">Logic Pro X</div>
 <div class="mac">使用 Mac 上装备齐全的专业录音室，助你成就惊世</div>
 <div class="zhi">之作。</div>
 <div class="jinyibu4"><a href="https://www.apple.com/cn/logic-pro/">进一步了解></a></div>
-<div class="Main"><img src="./Main.png" alt="">MainStage 3</div>
+<div class="Main"><img src="./image/music/Main.png" alt="">MainStage 3</div>
 <div class="jiang">将你的 Mac 变身现场演出装备，令观众耳目一新，难以</div>
 <div class="wang">忘怀。</div>
 <div class="jinyibu5"><a href="https://www.apple.com/cn/mainstage/">进一步了解></a></div>
-<div class="xieshou"><img src="./携手.png" alt=""></div>
+<div class="xieshou"><img src="./image/music/携手.png" alt=""></div>
 <div class="yu">与 Apple Music 携手。</div>
 <div class="zai">在 Apple Music 上展示精彩内容，你有更多方式。你可以获取 MusicKit、RSS 订阅</div>
 <div class="yuan">源、小组件、品牌指导原则和标识等。</div>
