技术支持最终稿

--- a/jishu.html
+++ b/jishu.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./css/support.css">
+    <link rel="stylesheet" href="./css/guide.css">
     <style>
     section.wrap0{overflow: hidden;text-align: center;margin-right: 100px;}
     p .clearfix1:after {content: ".";display: block;height: 0;clear: both;visibility: hidden; }
@@ -94,7 +95,19 @@
     .one>.topp{color: #555555;}
 </style>
 </head>
-<body>  <div class="part1">
+<body>  
+    <div><div class="guide">       
+     <ul><li  class="apple"><img src="./image/导航条/主导航/apple.PNG" alt=""><a  href="./index.html"  >
+          <spant"></span></a></li>
+          <li class="mac"><a href="./mac.html" ><spant">Mac</span></a></li>
+          <li class="ipad"> <a href="./ipad.html" > <spant">iPad</span> </a></li>
+          <li class="iphone"><a href="./iphone.html" ><spant">iPhone</span></a> </li>
+          <li class="watch"><a href="./watch.html" ><spant">Watch</span></a></li>
+          <li class="music"><a href="./music.html" ><spant">Music</span></a></li>
+          <li class="jishu"><a href="./support.html" ><span>技术支持</span></a></li>
+          <li class="search"><img src="./image/导航条/主导航/search.PNG" alt=""><a href=""  ></a></li>
+    </ul></div>
+  <div class="part1">
       <div class="p-img">
         <img src="./image/技术支持/back1.jpg" width="100%" height="450px"></div>
         <div class="p-title"><h1>欢迎使用Apple支持</h1></div></div>
@@ -159,7 +172,7 @@
     </div>  <br><br>
     <div class="part3">
         <div class="wz">
-          <h1>为每一个人而设计</h1>
+          <h2>为每一个人而设计</h2>
           <span>当创新惠及每一个人时就会爆发出巨大的能量。</span><br>
           <a class="tw"href="https://support.apple.com/zh-cn/accessibility">了解每种Apple设备内建的辅助功能</a>
         </div>
@@ -172,7 +185,8 @@
       <div>
         <img class="hgjg" src="./image/技术支持/phonebig.jpg" alt="">
         <div class="x-title">
-        <h1>通过 Apple 换购计划进行折抵换购</h1>
+        <h2>通过 Apple 换购计划进行折抵换购</h2>
+        <br>
         <span>用符合条件的设备以旧换新，获得换购优惠，或者我们免费为您进行回收处理。Apple 折抵换购对您和地球均有裨益。</span>
         <br>
         <a href="https://www.apple.com/cn/shop/trade-in">进一步了解</a>
@@ -181,13 +195,13 @@
     <div class="part5">
       <div class="left">
         <img src="./image/技术支持/communities.png" alt="">
-        <h1>有问题？</h1>
+        <h3>有问题？</h3>
         <span>问问大家。我们的Apple支持社区可以协助您找到答案。</span><br>
         <a class="tw"href="https://discussionschinese.apple.com/">在社区提问</a>
       </div>
       <div class="right">
         <img src="./image/技术支持/2people.png" alt="">
-        <h1>告诉我你需要哪方面的协助</h1>
+        <h3>告诉我你需要哪方面的协助</h3>
         <span>请回答几个问题，我们会协助您找到解决方案。</span><br>
         <a href="https://getsupport.apple.com/?caller=home&PRKEYS=">获得支持</a>
       </div>
@@ -198,7 +212,8 @@
         <div>
           <img class="czkc" src="./image/技术支持/teach.jpg" alt="">
           <div class="k-title">
-          <h1>学习、创造、激发灵感</h1>
+          <h1 class="bb">学习、创造、激发灵感</h1>
+          <br>
           <span>编写您的第一行代码、拍摄富有艺术感的照片，或制作您自己的音乐。参加 Apple Store 商店每天举办的实践课程。</span>
           <br>
           <a href="https://www.apple.com/cn/today/?&cid=WWA-ECO-TAA_ASUPPORT_HP">查找您附近的TodayatApple课程</a></div></div>
@@ -214,7 +229,7 @@
       <div class="bz">
       <img class="care"src="./image/技术支持/applecare-products_2x.png" id="care">
      <div class="bzzt">
-      <h1 class="bh">了解您的保障状态</h1>
+      <h2 class="bh">了解您的保障状态</h2>
       <p class="contentLink-copy"><a href="http://www.apple.com/cn/support/products/"  >AppleCare&nbsp;产品</a>&nbsp;可以为您提供额外维修保障与技术支持。如果您已经购买了 AppleCare 产品，可以<a href="/zh-cn/my-support" >在线进行管理</a></p>
       <a class="contentLink-link " href="https://support.apple.com/zh-cn/HT209256" >		    
       <span class="contentLink-text">获取有关保护 Apple ID 帐户的支持</span>
@@ -265,9 +280,9 @@
   <section>
     <div class="wrap">
         <img class="secu"src="./image/技术支持/security_2x.png" id="secu">
-          <h1 class="clearfix">保护 Apple ID 帐户的技巧</h1>
+          <h2 class="clearfix">保护 Apple ID 帐户的技巧</h2>
           <p class="contentLink-copy">这里有一些实用技巧，可帮助您确保 Apple ID 和帐户信息的安全。</p>
-<a class="contentLink-link " href="https://support.apple.com/zh-cn/HT209256" d "link.component_click" data-analytics-link-component_type="Content Link" data-analytics-link-component_name="Get support for securing Apple ID accounts" data-analytics-link-url="/zh-cn/HT209256" data-analytics-listener-added="true">		    
+<a class="contentLink-link " href="https://support.apple.com/zh-cn/HT209256"  >		    
 <span class="contentLink-text">获取有关保护 Apple ID 帐户的支持</span><span class="icon icon-chevronright" aria-hidden="true"></span>
 </a>
 </div>
