--- a/guide.html
+++ b/guide.html
@@ -48,7 +48,7 @@
                           </a>
                   </li>
                   <li class="jishu">
-                          <a href="./jishu.html" >
+                          <a href="./support.html" >
                                   <span>技术支持</span>
                               </a>
                       </li>
@@ -57,6 +57,8 @@
                      <a  href=""  >
                          </a>
                         </li>
+                  </ul>
+              </div>
           <!--             //////技术支持与购物袋	
                   <li class="support">
                       <a class="suppport.apple.com/zh-cn" data-analytics-title="support">
@@ -76,8 +78,10 @@
                   
               </ul>
           </div>
+          
   
                   <!-- 下部产品导航  -->
+      <!-- 
       <div class="background">
           <div class="products">
               <ul class="goods"> 
