--- a/watch.html
+++ b/watch.html
@@ -5,6 +5,236 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>watch</title>
+    <style>
+        /*对整体添加样式*/
+        .bottom>div{
+            padding: 0 80px;
+        }
+        .bottom{
+            background-color: #f2f2f2;
+        }
+        .bottom::after{
+            content: "";
+            display: block;
+            clear: both;
+
+        }
+        /*去除表格样式*/
+        div ul{
+            list-style: none;
+        }
+        /*对第五行添加样式*/
+        .wu>li{
+            float: left;
+            margin-left: 10px;
+            font-size: 12px;
+            color: #666666;
+            line-height: 1px;
+            margin-top: 0;
+            margin-bottom: 1px;
+        }
+        .wu>li:nth-child(1){
+            margin-left: 0;
+        }
+        .wu :nth-child(2):hover,.wu :nth-child(3):hover{
+              cursor: pointer;
+              text-decoration: underline;
+        }
+        .five>.wu{
+            padding:10px 0;
+        }
+        .five{
+            height: 40px;
+        }
+        /*对第四行添加样式*/
+        .si{
+            padding:10px 0; 
+        }
+        .right > li {
+            text-align: center;
+            width:66px;
+        }
+        .right > li:hover {
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .right >li:nth-child(2),
+        .right >li:nth-child(3),
+        .right >li:nth-child(4),
+        .right >li:nth-child(5)
+        { 
+            border-left: 1px solid #dcdcdc;
+        }
+        
+        .si>li{
+            float: left;
+            font-size: 12px;
+            color: #555555;
+            margin-left: 10px;
+            line-height: 10px;
+        }
+        .si>ul>li{
+            float: left;
+            font-size: 12px;
+            color: #555555;
+            margin-left: 10px;
+            line-height: 10px;
+        }
+        .si>li:nth-child(1){
+            margin-left: 0;
+        }
+        .si>ul{
+            margin-left: 20px;
+        }
+        .si>li:nth-child(1){
+            margin-right: 20px;
+        }
+        .four{
+            float: left;
+        }
+        .four{
+            width: 900px;
+            height: 30px;
+            padding: 0;
+        }
+        /*对第三行添加样式*/
+        .three{
+            font-size: 12px;
+            margin-left: 0;
+            border-bottom: 1px solid #dddddd;
+            line-height: 40px;
+            padding-bottom: 0;
+        }
+        .san{
+            padding:0; 
+            width: 900px;
+        }
+        .san>.blue{
+            color: #0070c9;
+        }
+        .san>.blue:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .three{
+            float: left;
+        }
+        .logo:hover{
+            cursor: pointer;
+        }
+        .logo{
+            font-size: 12px;
+            margin-left: 180px;
+            line-height: 40px;
+        }
+        /*对第二行添加样式*/
+        .two{
+            margin: 0 180px;
+        }
+        .two>div{
+            float: left;
+        }
+        .选购{
+            padding-left: 3px;
+        }
+        .title{
+            font-size: 12px;
+        }
+        .选购>li{
+            font-size: 11px;
+            line-height: 25px;
+        }
+        .选购>li:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .商店{
+            padding-left: 3px;
+        }
+        .商店>li{
+            font-size: 11px;
+            line-height: 25px;
+        }
+        .商店>li:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .AppleStore{
+            margin-left: 120px;
+        }
+        .教育应用及商务应用>div>ul{
+            padding-left: 3px;
+        }
+        .教育应用及商务应用>div>ul>li{
+            font-size: 11px;
+            line-height: 25px;
+        }
+        .教育应用及商务应用>div>ul>li:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .教育应用及商务应用{
+            margin-left: 120px;
+        }
+        .账户及Apple价值观>div>ul{
+            padding-left:3px;
+        }
+        .账户及Apple价值观>div>ul>li{
+            font-size: 11px;
+            line-height: 25px;
+        }
+        .账户及Apple价值观>div>ul>li:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .账户及Apple价值观{
+            margin-left: 120px;
+        }
+        .关于Apple>ul{
+            padding-left: 3px;
+        }
+        .关于Apple>ul>li{
+            font-size: 11px;
+            line-height: 25px;
+        }
+        .关于Apple>ul>li:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .关于Apple{
+            margin-left: 120px;
+        }
+        /*对顶部变化部分的编辑*/
+        .one{
+            width: 900px;
+            margin-left:180px;
+            font-size: 10px;
+            color: #888888;
+            border-bottom: 1px solid #dddddd;
+            line-height: 26px;
+        }
+        .one .topp:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .one .toppp:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .one .topppp:hover{
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        .one .topp{
+            color: #555555;
+        }
+        .one .toppp{
+            color: #555555;
+        }
+        .one .topppp{
+            color: #555555;
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -149,3 +379,167 @@
         <img src="./image/watch/yuanhuan.png" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;" >
         <img src="./image/watch/music.jpg" style="margin-top: 20px;margin-left: 50px;width: 1410px;height: 500px;" >
     </div>
+    <div class="bottom">
+        <div class="one">
+            <span class="top">
+            1.实际折抵金额取决于你用来折抵的 Apple Watch 的状况和型号。年满 18 周岁及以上者才可参与本计划。该服务可能仅在部分 Apple Store 零售店提供，并且仅限于部分符合条件的设备。Apple 保留出于任何原因拒绝或限制任何设备 (及其数量) 的权利。现有设备的折抵金额可用于冲抵购买新的 Apple 设备。其他条款请参见
+            <span class="toppp">
+            www.apple.com/cn/trade-in。
+            </span>
+            <br>
+            <span>
+            * 仅限新订阅用户。当试用期结束后，会员方案将按月自动续订。
+            </span>
+            <br>
+            <span>
+            某些款式的表带需单独购买。
+            </span>
+            <br>
+            <span>
+            Apple Watch Series 4 (GPS + 蜂窝网络) 需要使用 iPhone 6 或更新机型，并安装 iOS 12 或更新系统。Apple Watch Series 4 (GPS) 需要使用 iPhone 5s 或更新机型，并安装 iOS 12 或更新系统。
+            </span>
+            <br>
+            <span>
+            Apple Watch Series 3 (GPS + 蜂窝网络) 需要使用 iPhone 6 或更新机型，并安装 iOS 11 或更新系统。Apple Watch Series 3 (GPS) 需要使用 iPhone 5s 或更新机型，并安装 iOS 11 或更新系统。
+            </span>
+            <span>
+            使用蜂窝网络时，需要使用数据流量计划。Apple Watch 和 iPhone 须使用同一服务提供商。仅适用于部分服务提供商。并非所有服务提供商都支持企业手机账号或预付费计划，请向你所在的公司和服务提供商查询。可能不适用于某些原有的数据流量计划。蜂窝网络的覆盖范围取决于运营商网络。漫游功能在运营商网络覆盖范围之外不可使用。蜂窝网络服务的提供取决于运营商，可能会随时终止。请联系你的服务提供商了解更多详情。
+            </span>
+            <br>
+            <span>
+            访问
+            </span> 
+            <span class="topppp">
+            www.apple.com/cn/watch/cellular 
+            </span>
+            <span>
+            查询适用的无线运营商和适用条件。
+            </span>
+            <br>
+            <span>
+            Apple Watch Series 4 按照 ISO 22810:2010 标准，防水达到 50 米。即 Apple Watch Series 4 可用于游泳池或海滨游泳等较浅水域的水上活动。但 Apple Watch Series 4 并不适用于水肺潜水、滑水、面对高速水流的各种涉水活动及深水活动。
+            </span>
+            <br>
+            <span class="toppppp">
+            功能可能会有所变化。某些功能、应用软件和服务仅适用于部分地区或语言。
+            </span>
+            <span class="topp">
+            点击此处查看完整列表。
+            </span>
+        </div>
+        <div class="logo">
+            ♤  Apple  >  Watch
+        </div>
+        <br>
+        <div class="two">
+            <div class="选购及了解">
+                <strong class="title">选购及了解</strong>
+                <ul class="选购">
+                    <li>Mac</li>
+                    <li>iPad</li>
+                    <li>iPhone</li>
+                    <li>Watch</li>
+                    <li>Music</li>
+                    <li>iTunes</li>
+                    <li>HomePod</li>
+                    <li>iPod touch</li>
+                    <li>配件</li>
+                    <li>App Store 充值卡</li>
+                </ul>
+            </div>
+            <div class="AppleStore">
+                <strong class="title">Apple Store 商店</strong>
+               <ul class="商店">
+                   <li>查找零售店</li>
+                   <li>Genius Bar 天才吧</li>
+                   <li>Today at Apple</li>
+                   <li>Apple 夏令营</li>
+                   <li>Field Trip 课外活动</li>
+                   <li>Apple Store App</li>
+                   <li>翻新和优惠</li>
+                   <li>分期付款</li>
+                   <li>Apple Trade In 换购计划</li>
+                   <li>订单状态</li>
+                   <li>选购帮助</li>
+               </ul>
+            </div>
+            <div class="教育应用及商务应用">
+                <div class="教育应用">
+                    <strong class="title">教育应用</strong>
+                    <ul class="教育">
+                        <li>Apple 与教育</li>
+                        <li>高校师生选购</li>
+                    </ul>
+                </div>
+                <div class="商务应用">
+                    <strong class="title">商务应用</strong>
+                    <ul class="商务">
+                        <li>Apple 与商务</li>
+                        <li>商务选购</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="账户及Apple价值观">
+                <div class="账户">
+                    <strong class="title">账户</strong>
+                    <ul>
+                        <li>管理你的 Apple ID</li>
+                        <li>Apple Store 账户</li>
+                        <li>iCloud.com</li>
+                    </ul>
+                </div>
+                <div class="Apple价值观">
+                    <strong class="title">Apple价值观</strong>
+                    <ul>
+                        <li>辅助功能</li>
+                        <li>环境责任</li>
+                        <li>隐私</li>
+                        <li>供应商责任</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="关于Apple">
+                <strong class="title">关于Apple</strong>
+                <ul>
+                    <li>Newsroom</li>
+                    <li>Apple 管理层</li>
+                    <li>工作机会</li>
+                    <li>创造就业</li>
+                    <li>活动</li>
+                    <li>联系 Apple</li>
+                </ul>
+            </div>
+        <div class="three">
+            <div class="san">
+            <span>更多选购方式：</span>
+            <span class="blue" >查找你附近的 Apple Store 零售店</span>
+            <span>及</span>
+            <span class="blue" >更多门店</span>
+            <span>，或者致电 400-666-8800。</span>
+            </div>
+        </div>
+        <div class="four">
+            <ul class="si">
+                <li>
+                    Copyright © 2019 Apple Inc. 保留所有权利。
+                </li>
+                <ul class="right">
+                    <li>隐私政策</li>
+                    <li>使用条款</li>
+                    <li>销售政策</li>
+                    <li>法律信息</li>
+                    <li>网站地图</li>
+                </ul>
+            </ul>
+        </div>
+        <div class="five">
+            <ul class="wu" >
+                <li>京公安网安备11010502008968</li>
+                <li>京ICP备10214630</li>
+                <li >营业执照</li>
+                <li>无线电发射设备销售备案编号11201910351200</li>
+            </ul>
+        </div>
+    </div>
+</body>
+</html>
