修复大多bug，导航栏还需进一步完善

--- a/Mac.html
+++ b/Mac.html
@@ -238,47 +238,47 @@
 </head>
 <body>
         <div>
-                <div class="adver">
-                 <span><广告></span>  
-                </div>
-                <div class="guide">       
-                    <ul>
-                    <li  class="apple">
-                           <img src="./image/导航条/主导航/apple.PNG" alt="">
-                        <a  href="./index.html"  >
-                                <spant"></span>
-                            </a>
-                    </li>
-                    <li class="mac">
-                        <a href="./mac.html" >
-                                <spant">Mac</span>
-                            </a>
-                    </li>
-                    <li class="ipad">
-                        <a href="./ipad.html" >
-                                <spant">iPad</span>
-                            </a>
-                    </li>
-                    <li class="iphone">
-                        <a href="./iphone.html" >
-                                <spant">iPhone</span>
-                            </a>
-                    </li>
-                    <li class="watch">
-                        <a href="./watch.html" >
-                                <spant">Watch</span>
-                            </a>
-                    </li>
-                    <li class="music">
-                        <a href="./music.html" >
-                                <spant">Music</span>
-                            </a>
-                    </li>
-                    <li class="jishu">
-                            <a href="./jishu.html" >
-                                    <span>技术支持</span>
-                                </a>
-                        </li>
+            <div class="adver">
+                <span><广告></span>  
+               </div>
+               <div class="guide">       
+                   <ul>
+                   <li  class="apple">
+                          <img src="./image/导航条/主导航/apple.PNG" alt="">
+                       <a  href="./home_page.html"  >
+                               <spant"></span>
+                           </a>
+                   </li>
+                   <li class="mac">
+                       <a href="./Mac.html" >
+                               <spant">Mac</span>
+                           </a>
+                   </li>
+                   <li class="ipad">
+                       <a href="./iPad.html" >
+                               <spant">iPad</span>
+                           </a>
+                   </li>
+                   <li class="iphone">
+                       <a href="./iPhone.html" >
+                               <spant">iPhone</span>
+                           </a>
+                   </li>
+                   <li class="watch">
+                       <a href="./watch.html" >
+                               <spant">Watch</span>
+                           </a>
+                   </li>
+                   <li class="music">
+                       <a href="./Music.html" >
+                               <spant">Music</span>
+                           </a>
+                   </li>
+                   <li class="jishu">
+                           <a href="./jishu.html" >
+                                   <span>技术支持</span>
+                               </a>
+                       </li>
                     <li class="search">
                           <img src="./image/导航条/主导航/search.PNG" alt="">
                        <a  href=""  >
