--- a/jishu.html
+++ b/jishu.html
@@ -99,12 +99,12 @@
     <div><div class="guide">       
      <ul><li  class="apple"><img src="./image/导航条/主导航/apple.PNG" alt=""><a  href="./index.html"  >
           <spant"></span></a></li>
-          <li class="mac"><a href="./mac.html" ><spant">Mac</span></a></li>
-          <li class="ipad"> <a href="./ipad.html" > <spant">iPad</span> </a></li>
-          <li class="iphone"><a href="./iphone.html" ><spant">iPhone</span></a> </li>
+          <li class="mac"><a href="./Mac.html" ><spant">Mac</span></a></li>
+          <li class="ipad"> <a href="./iPad.html" > <spant">iPad</span> </a></li>
+          <li class="iphone"><a href="./iPhone.html" ><spant">iPhone</span></a> </li>
           <li class="watch"><a href="./watch.html" ><spant">Watch</span></a></li>
-          <li class="music"><a href="./music.html" ><spant">Music</span></a></li>
-          <li class="jishu"><a href="./support.html" ><span>技术支持</span></a></li>
+          <li class="music"><a href="./Music.html" ><spant">Music</span></a></li>
+          <li class="jishu"><a href="./jishu.html" ><span>技术支持</span></a></li>
           <li class="search"><img src="./image/导航条/主导航/search.PNG" alt=""><a href=""  ></a></li>
     </ul></div>
   <div class="part1">
