mac小部分修改

--- a/Mac.html
+++ b/Mac.html
@@ -324,7 +324,7 @@
            </div>
         </div>
 
-        <!-- mac -->
+        <!-- mac start -->
 <div class="content">
     <div class="wrapper">
 
@@ -489,7 +489,7 @@
 
    </div>                   
 </div>
-
+ <!-- mac end-->
 
 
 </div>
